--- a/server/console/html/layout/default.css
+++ b/server/console/html/layout/default.css
@@ -385,6 +385,20 @@ h2::after {
   margin-right: -50%;
 }
 
+#overlay {
+	position: fixed; /* Sit on top of the page content */
+	display: none; /* Hidden by default */
+	width: 100%; /* Full width (cover the whole page) */
+	height: 100%; /* Full height (cover the whole page) */
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+	z-index: 1500; /* Specify a stack order in case you're using a different order for other elements */
+	cursor: pointer; /* Add a pointer on hover */
+	} 
+
 /* Show submenu on hover (desktop) */
 @media (min-width: 769px) {
 	.submenu:hover .submenu-content { display: block; }
