--- a/server/console/html/layout/default.css
+++ b/server/console/html/layout/default.css
@@ -16,7 +16,7 @@ body h1 {
 
 .header {
 	display: flex;
-	justify-content: space-between;
+	justify-content: start;
 	align-items: center;
 	background-color: #333;
 	padding: 10px 20px;
@@ -24,7 +24,9 @@ body h1 {
 	width: 98%;
 	top: 0;
 	left: 0;
+	height: 45px;
 	z-index: 1000;
+	border-bottom: 5px solid #2d8dcc;
 	}
 
 .footer {
@@ -34,7 +36,7 @@ body h1 {
 	position: fixed;
 	width: 100%;
 	height: 25px;
-	background-color: #444;
+	background-color: #333;
 	color: white;
 	bottom: 0;
 	left: 0;
@@ -45,7 +47,7 @@ body h1 {
 
 .content {
 	padding-left: 25px;
-	margin-top: 150px;
+	margin-top: 100px;
 	}
 
 .module-content {
@@ -97,6 +99,36 @@ body h1 {
 	cursor: pointer;
 	}
 
+.navbar a:hover, .dropdown:hover .dropbtn {
+	background-color: #444;
+	}
+
+.navbar {
+	display: flex;
+	background-color: #444;
+	align-items: center;
+	justify-content: space-between;
+	color: white;
+	/*overflow: hidden;*/
+	position: fixed;
+	width: 100%;
+	top: 60px;
+	left: 0;
+	z-index: 999;
+	border-bottom: 5px solid #2d8dcc;
+	}
+
+.navbar a, a:hover {
+	text-decoration: none;
+	}
+
+.nav-text-right {
+	padding-right: 20px;
+	font-size: 12px;
+	color: #888;
+	}
+
+
 .drag-handle.disabled { cursor: default !important; }
 .drag-handle:not(.disabled) { cursor: grab; }
 .ghost-hidden * { opacity: 0; }
@@ -113,7 +145,8 @@ body h1 {
 .logo-img {
 	height: 40px;
 	width: auto;
-	display: block;
+	margin-top: 5px;
+	margin-left: 5px;
 	}
 
 .user-menu {
@@ -130,7 +163,7 @@ body h1 {
 	}
 
 .user-button:hover {
-	background-color: #444;
+	background-color: #333;
 	}
 
 .user-dropdown {
@@ -163,36 +196,19 @@ body h1 {
 	cursor: pointer;
 	}
 
-.user-dropdown a:hover {
-	background-color: #555;
+.navbar a:hover, .dropdown:hover .dropbtn {
+	background-color: #444;
+	}
+
+.user-dropdown a:hover, .user-menu:hover .user-button {
+	background-color: #444;
 	border-radius: 6px;
 	}
 
 .user-menu:hover .user-dropdown { display: block; }
 
-.navbar {
-	display: flex;
-	background-color: #444;
-	align-items: center;
-	justify-content: space-between;
-	color: white;
-	/*overflow: hidden;*/
-	position: fixed;
-	width: 100%;
-	top: 60px;
-	left: 0;
-	z-index: 999;
-	border-bottom: 5px solid #2d8dcc;
-	}
-
-.navbar a, a:hover {
+.header a, a:hover {
 	text-decoration: none;
-	}
-
-.nav-text-right {
-	padding-right: 20px;
-	font-size: 14px;
-	color: #888;
 	}
 
 .dropdown {
@@ -236,6 +252,7 @@ body h1 {
 	z-index: 1;
 	box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
 	border-radius: 6px;
+	width: 200px;
 	}
 
 .dropdown-content a {
@@ -255,6 +272,7 @@ body h1 {
 	}
 
 .dropdown:hover .dropdown-content { display: block; }
+
 
 /* MenuBar Icons */
 .icon {
@@ -280,6 +298,7 @@ body h1 {
 	z-index: 1;
 	border-radius: 6px;
 	box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
+	width: 200px;
 	}
 
 .submenu-link {
@@ -295,6 +314,10 @@ body h1 {
 
 .submenu-link .arrow {
 	margin-left: 8px;
+	}
+
+.dropdown a:hover, .submenu:hover .submenu-link {
+	background-color: #555;
 	}
 
 input[type="text"] {
@@ -342,21 +365,33 @@ input[type="password"]::placeholder { color: #ddd; }
 
 .formgo:hover {
 	background-color: #676dcb;
+	cursor: pointer;
+	}
+
+.formgo:disabled {
+	background-color: #555;
+	border: 2px solid #333;
+	border-radius: 8px;
+	color: #777;
+	cursor: normal;
 	}
 
 table {
 	width: 100%;
-	border: 1px solid #5f618a;
+	border: 1px solid #101017;
 	border-collapse: collapse;
+	border-radius: 8px;
+	border-collapse: separate !important;
+	border-spacing: 0;
 	}
 
 th, td {
 	padding: 5px;
 	margin-top: 20px;
 	background-color: #2b2d46;
-	color: #aaa;
+	color: #bbb;
 	font-weight: bold;
-	border: 1px solid #5f618a;
+	border: 1px solid #101017;
 	}
 
 h2 {
