Tweaked layout of filter options on cstatus; adjusted stylesheet to change pointer to not allowed when hovering over disabled buttons

--- a/server/console/html/layout/default.css
+++ b/server/console/html/layout/default.css
@@ -373,7 +373,7 @@ input[type="password"]::placeholder { color: #ddd; }
 	border: 2px solid #333;
 	border-radius: 8px;
 	color: #777;
-	cursor: normal;
+	cursor: not-allowed;
 	}
 
 table {
