Fixed bug causing not-allowed cursor to display over all checkboxes

--- a/server/console/html/layout/default.css
+++ b/server/console/html/layout/default.css
@@ -324,7 +324,7 @@ select:disabled {
 	cursor: not-allowed;
 	}
 
-input[type="checkbox"] {
+input[type="checkbox"]:disabled {
 	cursor: not-allowed;
 	}
 
