Style adjustments for disabled form elements

--- a/server/console/html/layout/default.css
+++ b/server/console/html/layout/default.css
@@ -322,6 +322,10 @@ body h1 {
 
 select:disabled {
 	cursor: not-allowed;
+	border-radius: 8px;
+	font-size: 14px;
+	opacity: 0.9;
+	border: 2px solid #ddd;
 	}
 
 input[type="checkbox"]:disabled {
@@ -346,6 +350,7 @@ input[type="text"]::placeholder { color: #ddd; }
 
 input[type="text"]:disabled {
 	cursor: not-allowed;
+	color: transparent;
 	}
 
 input[type="password"] {
